--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_BASE_URL=http://localhost:11434/v1/
 OPENAI_API_KEY=ollama
 ENV=development
 QDRANT_URL="http://localhost:6333"
+INNGEST_API_BASE=http://localhost:8288/v1
